add validation middleware
